Generating openapi and swagger documentation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ chrono = {version = "0.4.23", features = ["serde"]}
 bigdecimal = { version = "0.3.0", features = ["serde"] }
 regex = "1.7.0"
 actix-cors = "0.6.4"
+utoipa = "3"
+utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
