--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SERVER_PORT=8080
 SERVER_ADDR=127.0.0.1
-DATABASE_URL=postgres://myusername:mypassword@127.0.0.1:5432/fs-project
+DATABASE_URL=postgres://myusername:mypassword@fs-postgresql:5432/fs-project
 POOL_SIZE=20
